# someip-fw

./: .gitignore  README.md
client/: CMakeLists.txt
client/etc/: vsomeip.json
client/src/: main.cpp
server/: CMakeLists.txt
server/etc/: vsomeip.json
server/src/: main.cpp
